Update examples after class questions. Remove % formatting.

--- a/Unit 2 - Stepping up.ipynb
+++ b/Unit 2 - Stepping up.ipynb
@@ -9,11 +9,11 @@
     "From the previous tutorial it is evident that iterative procedures need to be explored further. The real algorithmic thinking starts here! \n",
     "\n",
     "#### Contents:\n",
-    "1. [Looping](#looping)\n",
+    "1. Looping\n",
     "    * Conditions\n",
     "    * Exercise 2.1\n",
-    "2. [Branching](#branching)\n",
-    "3. [Functions](#functions)\n",
+    "2. Branching\n",
+    "3. Functions\n",
     "    * Arguments\n",
     "    * Interactivity\n",
     "    * Exercise 2.2\n",
@@ -33,61 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.10000000000000000555\n",
-      "0.20000000000000001110\n",
-      "0.29999999999999998890\n",
-      "0.40000000000000002220\n",
-      "0.50000000000000000000\n",
-      "0.59999999999999997780\n",
-      "0.69999999999999995559\n",
-      "0.80000000000000004441\n",
-      "0.90000000000000002220\n",
-      "1.00000000000000000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1, 11):\n",
     "    y = i/10\n",
-    "    print(\"{:.20f}\".format(y))"
+    "    print(y)\n",
+    "    # print(\"{:.20f}\".format(y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1\n",
-      "0.2\n",
-      "0.30000000000000004\n",
-      "0.4\n",
-      "0.5\n",
-      "0.6\n",
-      "0.7\n",
-      "0.7999999999999999\n",
-      "0.8999999999999999\n",
-      "0.9999999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "while i <= 0.9: # Always check your terminating condition\n",
     "    i = i + 0.1\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    # print(\"{:.20f}\".format(i))"
    ]
   },
   {
@@ -101,17 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 4, 6, 8]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = \"Hello, world!\"\n",
     "B = (2, 4, 6, 8)\n",
@@ -124,22 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Key: 1 has value: 1\n",
-      "Key: 2 has value: 4\n",
-      "Key: 3 has value: 9\n",
-      "Key: 4 has value: 16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "C = {1:1, 3:9, 4:16, 2:4}\n",
+    "C = {1:1, 3:9, 5:25, 4:16, 2:4}\n",
+    "sorted(C.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for key, val in sorted(C.items()):\n",
     "    print('Key: %s has value: %s' % (key, val))"
    ]
@@ -173,7 +131,9 @@
    "source": [
     "a = 10\n",
     "b = 20\n",
-    "c = 10*2"
+    "c = 10*2\n",
+    "d = 40.0//2\n",
+    "d"
    ]
   },
   {
@@ -183,7 +143,7 @@
    "outputs": [],
    "source": [
     "print(b > a) \n",
-    "print(b == c) # Is b exactly equal to a?\n",
+    "print(b == d) # Is b exactly equal to c?\n",
     "print(a != b) # Is a not equal to b?\n",
     "print('')\n",
     "\n",
@@ -248,7 +208,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Before running the next cell, guess if this loop will ever ﬁnish?"
+    " Before running the next cell, guess if this loop will ever ﬁnish?\n",
+    " \n",
+    " Tip: Greek letters can also be typeset. Try writing \\gamma or \\Gamma and pressing Tab directly afterwards. "
    ]
   },
   {
@@ -257,10 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# eps = 0.5\n",
-    "# while 1.0 + eps > 1.0: \n",
-    "#     eps = eps / 2.0 \n",
-    "#     print(eps)"
+    "# ϵ = 0.5\n",
+    "# while 1.0 + ϵ > 1.0: \n",
+    "#     ϵ = ϵ / 2.0 \n",
+    "#     print(ϵ)"
    ]
   },
   {
@@ -269,9 +231,11 @@
    "source": [
     "## Branching <a name=\"branching\"></a>\n",
     "\n",
-    "In cases where we used loop statements, _all_ the statements within the looping commands are repeated from top to bottom a certain number of times. However, if only certain commands are applicable to certain conditions (see above), branching can be used. \n",
+    "In cases where we used loop statements, _all_ the statements within the loops are repeated from top to bottom until a condition is no longer satisfied. A for loop terminates when there are no more items in a range, whereas a while loop terminates when a `False` is reported.\n",
     "\n",
-    "The ordering is cardinal. To initialise a branch, ask `if`. If the first condition isn't satisfied and you have another condition to check, ask `elif` (pronounced 'else-if'). If you have a final output that depends on all the previous conditions being unmet, use `else`. \n",
+    "However, if only certain commands are applicable to certain conditions (see above), branching can be used. \n",
+    "\n",
+    "The ordering is cardinal. To initialise a branch, ask `if`. If the first condition isn't satisfied and you have another condition to check, ask `elif` (pronounced 'else-if'). If you have a final output that depends on all the previous conditions being unmet, use `else`. An `else` has no explicit condition statement.\n",
     "\n",
     "The following will give __one or zero__ outputs: \n",
     " + `if`\n",
@@ -303,8 +267,7 @@
     "elif (a % 5) == 0:\n",
     "    print(\"a is divisible by 5\")\n",
     "else: \n",
-    "    print(\"a is not a multiple of 2, 3 nor 5\")\n",
-    "    "
+    "    print(\"a is not a multiple of 2, 3 nor 5\")"
    ]
   },
   {
@@ -322,8 +285,7 @@
     "if (a % 5 == 0):\n",
     "    print(\"a is divisible by 5\")\n",
     "if (a % 2 != 0) and (a % 3 != 0) and (a % 5 != 0): \n",
-    "    print(\"a is not a multiple of 2, 3 nor 5\")\n",
-    "    "
+    "    print(\"a is not a multiple of 2, 3 nor 5\")"
    ]
   },
   {
@@ -341,11 +303,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for num in range(2, 10):\n",
-    "    if num % 2 == 0:\n",
-    "        print(\"Even number  :\", num)\n",
-    "        continue #break #try removing both\n",
-    "    print(\"Uneven number:\", num)"
+    "for i in range(1,6):\n",
+    "    for num in range(2, 10):\n",
+    "        if num % 2 == 0:\n",
+    "            print(\"Even number  :\", num)\n",
+    "            break #try removing both\n",
+    "        print(\"Uneven number:\", num)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice how an `else` may be used since the for loop acts like an `if`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2,2):\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(0)"
    ]
   },
   {
@@ -355,7 +338,7 @@
    "outputs": [],
    "source": [
     "for i in range(2, 10):\n",
-    "    for j in range(2, i):\n",
+    "    for j in range(2, i): #if j is in this range, else print that it's a prime number\n",
     "        if i % j == 0:\n",
     "            print(i, '=', j, '*', i//j)\n",
     "            break \n",
@@ -416,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# multiplier.__doc__"
+    "multiplier.__doc__"
    ]
   },
   {
@@ -427,7 +410,7 @@
    },
    "outputs": [],
    "source": [
-    "# help(multiplier)"
+    "help(multiplier)"
    ]
   },
   {
@@ -481,7 +464,7 @@
     "\n",
     "print(a, b)\n",
     "print(my_function())\n",
-    "# print(baz)"
+    "print(baz)"
    ]
   },
   {
@@ -503,7 +486,7 @@
     "    y = m*x + c\n",
     "    return y\n",
     "\n",
-    "straight_line(5)"
+    "straight_line(5, c=-3, m=2)"
    ]
   },
   {
@@ -527,32 +510,41 @@
     "    m: gradient\n",
     "    c: y-intercept\n",
     "    \"\"\"\n",
-    "    x, m, c = q[0], q[1], q[2]\n",
+    "    x, m, c = q\n",
     "    y = m*x + c\n",
     "    return y\n",
     "\n",
-    "straight_line2((5,1,1))"
+    "straight_line2([5, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "straight_line2((5, 1, 1))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, you can also write a function with only keyword arguments. Consider this function that calculates whichever unspecified variable (degree of freedom) in the ideal gas law is needed, assuming consistent units. What happens when you have too many/few arguments?\n",
+    "However, you can also write a function with only keyword arguments. Consider this function that calculates whichever unspecified variable (degree of freedom) in the ideal gas law is needed, assuming consistent units. What happens when you have too many/few arguments? What happens when you don't use the keywords or change their ordering?\n",
     "\n",
     "$$ PV = nRT $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ideal_gas_law(n=None, P=None, T=None, V=None):\n",
     "    \"\"\"Return a tuple of the missing degree of freedom for the IGL.\n",
     "    \n",
-    "    Requires exactly 3 inputs. Assumes SI units.\n",
+    "    Requires exactly 3 inputs.\n",
     "\n",
     "    Keyword arguments:\n",
     "    n -- moles of gas (kmol)\n",
@@ -579,42 +571,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('P = ', 103.16918181818183, ' kPaa')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ideal_gas_law(T=273, n=1, V=22)"
+    "ideal_gas_law(T=273, n=1, P=101)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('V = ', 22.472495049504953, ' m³')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ideal_gas_law(T=273, n=1, P=101)"
+    "# ideal_gas_law(T=273, P=101)\n",
+    "# ideal_gas_law(T=273, n=1, P=101, V=22.5)\n",
+    "# ideal_gas_law(273, 1, 101)"
    ]
   },
   {
@@ -683,7 +655,7 @@
    "source": [
     "### Interactivity\n",
     "\n",
-    "We can make functions interactive, by using either the `input()` statement to ask the user a question, or add a slider widget from the `ipywidgets` module"
+    "We can make functions interactive by using the `input()` statement to ask the user a question. Anything that the user types will be taken as a string. Alternatively, we can add a slider widget from the `ipywidgets` module."
    ]
   },
   {
@@ -692,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def square(num=1):\n",
+    "def square(num):\n",
     "    print(\"{} squared is {}\".format(num, num*num))"
    ]
   },
@@ -703,7 +675,7 @@
    "outputs": [],
    "source": [
     "answer = input('What number would you like to square? ')\n",
-    "square(int(answer))"
+    "square(float(answer))"
    ]
   },
   {
@@ -768,7 +740,7 @@
    "outputs": [],
    "source": [
     "def f(x): \n",
-    "    return x ** 2 \n",
+    "    return x**2 \n",
     "\n",
     "y = map(f, range(10)) # the same characteristic of the list not printing is observed as with the range function\n",
     "list(y)               # thus we force it into a list to display"
@@ -780,7 +752,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map( lambda x: x ** 2, range(10) )"
+    "map(lambda x: x**2, range(10))"
    ]
   },
   {
@@ -823,7 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[[x, x ** 2] for x in vec if x < 8] "
+    "[[x, x**2] for x in vec if x < 8] "
    ]
   },
   {
