Add Exercise 3.2 and 3.3. Remove links in local tables of content

--- a/Unit 1 - First Steps on Jupyter.ipynb
+++ b/Unit 1 - First Steps on Jupyter.ipynb
@@ -10,15 +10,15 @@
     "\n",
     "Blocks of text such as this one offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). Be sure to click around on these cells to see the hidden formatting syntax.\n",
     "\n",
-    "## Contents:\n",
-    "1. [Simple math](#math)\n",
+    "#### Contents:\n",
+    "1. Simple math\n",
     "    * Mathematical operations\n",
     "    * Importing a module\n",
     "    * Getting help\n",
-    "2. [Numerical objects](#numobj)\n",
+    "2. Numerical objects\n",
     "    * Assigning variables\n",
     "    * Assignment operators\n",
-    "3. [Data sequences](#datseq)\n",
+    "3. Data sequences\n",
     "    * Strings\n",
     "    * Tuples\n",
     "    * Lists\n",
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple math <a name=\"math\"></a> \n",
+    "## Simple math \n",
     "\n",
     "### Mathematical operations \n",
     "\n",
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Numerical objects  <a name=\"numobj\"></a>\n",
+    "## Numerical objects\n",
     "\n",
     "### Assigning variables\n",
     "\n",
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data sequences <a name=\"datseq\"></a>\n",
+    "## Data sequences \n",
     "Strings, lists, tuples, dictionaries and sets are sequences. We’ll consider the first few here. Tuples and strings are “immutable” (which means we can’t change individual elements within the sequence), whereas lists are “mutable”.\n",
     "\n",
     "Note that ndarrays, Series and DataFrames are other special sequences which come with the NumPy and Pandas modules.\n",
