--- a/Unit 2 - Stepping up.ipynb
+++ b/Unit 2 - Stepping up.ipynb
@@ -11,12 +11,10 @@
     "#### Contents:\n",
     "1. Looping\n",
     "    * Conditions\n",
-    "    * Exercise 2.1\n",
     "2. Branching\n",
     "3. Functions\n",
     "    * Arguments\n",
     "    * Interactivity\n",
-    "    * Exercise 2.2\n",
     "    * Functional programming"
    ]
   },
@@ -24,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Looping <a name=\"looping\"></a>\n",
+    "## Looping \n",
     "\n",
     "Let's say I want to calculate a range of tenths: 0.1, 0.2, ..., 0.9, 1.0 (remember `range()` outputs only integers).\n",
     "\n",
@@ -229,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Branching <a name=\"branching\"></a>\n",
+    "## Branching \n",
     "\n",
     "In cases where we used loop statements, _all_ the statements within the loops are repeated from top to bottom until a condition is no longer satisfied. A for loop terminates when there are no more items in a range, whereas a while loop terminates when a `False` is reported.\n",
     "\n",
@@ -351,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions <a name=\"functions\"></a>\n",
+    "## Functions \n",
     "\n",
     "Functions allow us to group a number of statements into a logical block instead of copying it repeatedly. We communicate with a function through a clearly deﬁned interface, providing certain parameters to the function, and receiving some information back. It therefore acts like a \"black box\". As seen in the previous unit, some functions are built-in, whilst others are imported from modules. \n",
     "\n",
