Format Ex 2.2 and 2.3

--- a/Unit Exercises.ipynb
+++ b/Unit Exercises.ipynb
@@ -78,11 +78,11 @@
    "source": [
     "## Exercise 2.3: \n",
     "\n",
-    "According to Perry et al. (2008: 2-170), the heat capacities of inorganic or organic liquids can be computed by the following polynomial, with $ C_{pL} $ in J/(kmol K) and $T$ in K:\n",
+    "According to Perry _et al_ (2008: 2-170), the heat capacities of inorganic or organic liquids can be computed by the following polynomial, with $ C_{pL} $ in J/(kmol K) and $T$ in K:\n",
     "\n",
     "$$ C_{pL} = C1 + C2T + C3T^2 + C4T^3 + C5T^4 $$\n",
     "\n",
-    "The 345 different compounds have between 1 and 5 constants tabulated, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity for the following compounds at a certain temperature, but it must display a warning if it is out of the acceptable temperature range. \n",
+    "The 345 different compounds have between 1 and 5 constants tabulated, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in KJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given tempearture is out of the acceptable range. \n",
     "\n",
     "Do not:\n",
     " - Change the given lists below (e.g. by adding zeros); use them as the input\n",
@@ -128,11 +128,21 @@
    "source": [
     "## Exercise 3.2:\n",
     "\n",
-    "Write a program that asks the user to enter a vector u. The program must then look at every component of vector u and check whether the component is divisible by 2. If it divisible by 2 the program must store a 1 in the position of the even component.\n",
-    "Otherwise the program must store a zero in the position of the respective component. The number 0 is an even number.\n",
+    "Write a function that accepts a vector $u$. The program must then check whether each element is divisible by 2. If it is divisible by 2, it must store a 1 in the position of the even component. Otherwise the program must store a zero. Zero is an even number.\n",
     "\n",
-    "$$ u = [2, 0, -6, 7, 10, -4, -11] $$\n",
-    "$$ u_{even} = [1, 1, 1, 0, 1, 1, 0] $$"
+    "\\begin{array}{lcl}\n",
+    "u = \n",
+    "\\begin{bmatrix}\n",
+    "2 & 0 & -6 & 7 & 10 & -4 & -11\\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{array}\n",
+    "\n",
+    "\\begin{array}{lcl} \n",
+    "u_{even} = \n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & 1 & 0 & 1 & 0 & 0\\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{array}"
    ]
   },
   {
@@ -142,16 +152,18 @@
     "## Exercise 3.3:\n",
     "\n",
     "Matrix A is antisymmetric (skew-symmetric) if it is square and the following holds for all $i$ = 0, 1, 2,..., n and $j$ = 0, 1, 2,..., n:\n",
+    "\n",
     "$$ A(i,j) = -A(j,i) $$\n",
     "\n",
-    "Write a function that accepts a matrix. The program must then tell the user whether the matrix entered is skew-symmetric or not. Here is an example of an anti-symmetric matrix:\n",
-    "\n",
+    "For example:\n",
     "\\begin{bmatrix}\n",
     "0 & 1 & -2 & 3 \\\\\n",
     "-1 & 0 & 4 & -5 \\\\\n",
     "2 & -4 & 0 & 6 \\\\\n",
     "-3 & 5 & -6 & 0\n",
-    "\\end{bmatrix}"
+    "\\end{bmatrix}\n",
+    "\n",
+    "Write a function that accepts a matrix and determines whether it is skew-symmetric or not."
    ]
   },
   {
