--- a/Unit 2 - Stepping up.ipynb
+++ b/Unit 2 - Stepping up.ipynb
@@ -301,13 +301,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1,6):\n",
-    "    for num in range(2, 10):\n",
-    "        if num % 2 == 0:\n",
-    "            print(\"Even number  :\", num)\n",
-    "            break #try removing both\n",
-    "        print(\"Uneven number:\", num)\n",
-    "    print(i)"
+    "for num in range(2, 10):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"Even number  :\", num)\n",
+    "        continue #break #try removing both\n",
+    "    print(\"Uneven number:\", num)"
    ]
   },
   {
@@ -326,7 +324,7 @@
     "for i in range(2,2):\n",
     "    print(i)\n",
     "else:\n",
-    "    print(0)"
+    "    print('potato')"
    ]
   },
   {
