Fix Ex 3.2 vector example. Add Ex 4.1 and 4.2

--- a/Unit Exercises.ipynb
+++ b/Unit Exercises.ipynb
@@ -34,7 +34,7 @@
     " + [27, 30, 44, 55, 0, 3, 9, 27, 30, 44, 55, 0, 3, 9]\n",
     " + [0, 0, 3, 3, 9, 9, 27, 27, 30, 30, 44, 44, 55, 55]\n",
     "\n",
-    "b) Whilst testing your code you may see that the output of previous cells keeps changing when you accidentally rerun them. After your first succesful run, rewrite your code so that this does not happen."
+    "b) While testing your code you may see that the output of previous cells keeps changing when you accidentally rerun them. After your first succesful run, rewrite your code so that this does not happen."
    ]
   },
   {
@@ -82,7 +82,7 @@
     "\n",
     "$$ C_{pL} = C1 + C2T + C3T^2 + C4T^3 + C5T^4 $$\n",
     "\n",
-    "The 345 different compounds have between 1 and 5 constants tabulated, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in KJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given tempearture is out of the acceptable range. \n",
+    "The 345 different compounds have between 1 and 5 constants tabulated, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in KJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given temperature is out of the acceptable range. \n",
     "\n",
     "Do not:\n",
     " - Change the given lists below (e.g. by adding zeros); use them as the input\n",
@@ -128,7 +128,7 @@
    "source": [
     "## Exercise 3.2:\n",
     "\n",
-    "Write a function that accepts a vector $u$. The program must then check whether each element is divisible by 2. If it is divisible by 2, it must store a 1 in the position of the even component. Otherwise the program must store a zero. Zero is an even number.\n",
+    "Write a function that accepts a vector $u$ and checks whether each element is divisible by 2. If it is divisible by 2, it must store a 1 in the position of the even component. Otherwise it must store a zero. Zero is an even number.\n",
     "\n",
     "\\begin{array}{lcl}\n",
     "u = \n",
@@ -140,7 +140,7 @@
     "\\begin{array}{lcl} \n",
     "u_{even} = \n",
     "\\begin{bmatrix}\n",
-    "1 & 0 & 1 & 0 & 1 & 0 & 0\\\\\n",
+    "1 & 1 & 1 & 0 & 1 & 1 & 0\\\\\n",
     "\\end{bmatrix}\n",
     "\\end{array}"
    ]
@@ -167,11 +167,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 4.1:\n",
+    "\n",
+    "Plot the isotherms for 1 mol of ideal gas at 25 °C and 100 °C, as the volume increases from 10 to 30 L. Label the PV-graph appropriately with a title, legend and axis labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4.2:\n",
+    "\n",
+    "Plot the PVT-surface of 1 mol of an ideal gas, from 1 to 4 L and 10 to 70 °C. Display the temperature axis values in degrees Celsius.\n",
+    "\n",
+    "Now plot the PVT-surface of 1 mol water in the same region using the Van der Waals equation of state.\n",
+    "$$ \\Big(P+ a \\Big(\\frac{n}{V}\\Big)^2\\Big)(V-nb) = nRT $$\n",
+    "\n",
+    "with a = 5.537 $\\frac{bar L^2}{mol}$\n",
+    "and b = 0.03049 $\\frac{L}{mol}$\n",
+    "\n",
+    "Data source: https://bit.ly/2VMxIu3"
+   ]
   }
  ],
  "metadata": {
