Add polynomial fit plot

--- a/Unit 4 - The Plot Thickens.ipynb
+++ b/Unit 4 - The Plot Thickens.ipynb
@@ -143,7 +143,7 @@
     "plt.plot(t, np.cos(2*t), label='Cos(2t)')\n",
     "plt.plot([t[0], t[-1]], [0, 0], 'k') # x-axis in black (k)\n",
     "plt.legend(loc='best')\n",
-    "# plt.show()"
+    "plt.show()"
    ]
   },
   {
@@ -156,7 +156,7 @@
     " \n",
     "Furthermore, we can change the figure size from the default value of 6.4 x 4.8 inch$^2$.\n",
     "\n",
-    "Lastly you can save figures in a specific format like png, jpg, pdf or svg (scalable vector graphics will never lose resolution, no matter how large you make them). Optional arguments for `.savefig()` include:\n",
+    "Lastly, you can save figures in a specific format like .png, .jpg, .pdf or .svg (scalable vector graphics will never lose resolution, no matter how large you make them). Optional arguments for `.savefig()` include:\n",
     "+ `dpi`: set the resolution of the file to a numeric value.\n",
     "+ `transparent`: can be set to True, which causes the background of the chart to be transparent.\n",
     "+ `bbox_inches`: can be set to alter the size of the bounding box (whitespace) around the output image. In most cases, if no bounding box is desired, using `bbox_inches='tight'` is ideal (in that case use `pad_inches` option to specify the amount of padding around the image)."
@@ -194,11 +194,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's visualise that polynomial fit from Unit 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdata = np.array([0.0, 1.0, 2.0, 3.0, 4.0, 5.0]) \n",
+    "ydata = np.array([0.0, 0.8, 0.9, 0.1, -0.8, -1.0])\n",
+    "z = np.polyfit(xdata , ydata , 3)\n",
+    "p = np.poly1d(z) # creates a polynomial object from the fitted coefficients\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xfit = np.linspace(xdata[0], xdata[-1])\n",
+    "yfit = p(xfit)\n",
+    "\n",
+    "plt.figure(figsize=(4.5, 4))  \n",
+    "plt.plot(xdata, ydata, 'o', label='Data')\n",
+    "plt.plot(xfit, yfit, label='Polynomial')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Other 2D plots\n",
     "\n",
     "### Categorical variables\n",
     "\n",
-    "If we want to compare many different plots next to each other, we can make subplots. They allow a rectangular grid of same-size figures to be displayed together. They are named by 3 numbers representing the total number of rows and columns, followed by the plot number (f.l.t.r.)\n",
+    "If we want to compare many different plots next to each other, we can make subplots. They allow a rectangular grid of same-size figures to be displayed together. Note that `plt.subplots()` is preferred over `plt.subplot()` due to easier formatting and customisation.\n",
     "\n",
     "Let's use them to see how to plot categorical variables. "
    ]
@@ -212,19 +248,23 @@
     "names = ['A', 'B', 'C']\n",
     "val = [1, 10, 5]\n",
     "\n",
-    "plt.figure(figsize=(9, 3))\n",
-    "\n",
-    "plt.subplot(131)\n",
-    "plt.scatter(names, val)\n",
-    "\n",
-    "plt.subplot(132)\n",
-    "plt.bar(names, val)\n",
-    "\n",
-    "plt.subplot(133).invert_yaxis() # labels from top to bottom\n",
-    "plt.barh(names, val)\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(8, 2.5))\n",
+    "axes[0].scatter(names, val)\n",
+    "axes[1].bar(names, val)\n",
+    "axes[2].barh(names, val) \n",
+    "axes[2].invert_yaxis() # labels from top to bottom\n",
     "\n",
     "plt.suptitle('Categorical Plotting')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.subplots?"
    ]
   },
   {
@@ -429,7 +469,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interact(decaying_sinusoid, A=-2, B=(-3, 3, 0.5))"
+    "interact(decaying_sinusoid, A=-2, B=(-3, 3, 0.5), continuous_update=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# interact?"
    ]
   },
   {
