Change subplot to subplots and add clarifications after the lecture

--- a/Unit 4 - The Plot Thickens.ipynb
+++ b/Unit 4 - The Plot Thickens.ipynb
@@ -10,7 +10,7 @@
     "Examples and help are available here: \n",
     "\n",
     "- https://matplotlib.org/tutorials/index.html\n",
-    "- https://www.scipy-lectures.org/intro/matplotlib/index.html\n",
+    "- http://scipy-lectures.org/intro/matplotlib/index.html\n",
     "\n",
     "#### Contents:\n",
     "1. Basic plots\n",
@@ -105,7 +105,6 @@
     "plt.ylabel('V$_i$ (m$^3$)')\n",
     "plt.legend(loc='upper center')\n",
     "plt.text(1.75, 2.25, 'Both dip here') # Specifies annotation location & text\n",
-    "# plt.text(0.1, 3.6, '$\\frac{dV}{dt} = 0$')\n",
     "plt.show()"
    ]
   },
@@ -234,7 +233,7 @@
     "\n",
     "### Categorical variables\n",
     "\n",
-    "If we want to compare many different plots next to each other, we can make subplots. They allow a rectangular grid of same-size figures to be displayed together. Note that `plt.subplots()` is preferred over `plt.subplot()` due to easier formatting and customisation.\n",
+    "If we want to compare many different plots next to each other, we can make subplots. They allow a rectangular grid of same-size figures to be displayed together. Note that `plt.subplots()` is preferred over `plt.subplot()` due to easier formatting and customisation. It returns 2 outputs, namely a figure and an array of axes (with every row of subplots becoming a row of the matrix).\n",
     "\n",
     "Let's use them to see how to plot categorical variables. "
    ]
@@ -277,7 +276,7 @@
     "+ `plt.semilogy(x, y)` \n",
     "+ `plt.plot(x, y)` with `plt.yscale('log')`\n",
     "\n",
-    "Note that the symmetrical logarithmic scale is logarithmic in both the positive and negative directions from the origin. To prevent its x-axis from squashing together, the plot was enlarged, and the grid spacing adjusted."
+    "Note that the symmetrical logarithmic scale is logarithmic in both the positive and negative directions from the **origin**. To prevent its x-axis from squashing together, the plot was enlarged, and the grid spacing adjusted."
    ]
   },
   {
@@ -286,35 +285,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(-50.0, 50.0, 0.1)\n",
-    "y = np.arange(0, 100.0, 0.1)\n",
+    "# plt.yscale?\n",
+    "# plt.subplots_adjust?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(-50, 50, 0.1)\n",
+    "y = np.arange(0, 100, 0.1)\n",
     "\n",
-    "plot_list = [plt.plot,\n",
-    "            plt.semilogy,\n",
-    "            plt.semilogx,\n",
-    "            plt.loglog]\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(9.5, 5))\n",
     "\n",
-    "plt.figure(figsize=(9.5, 5)) \n",
+    "axes[0, 0].plot(x, y)\n",
+    "axes[0, 1].semilogy(x, y)\n",
+    "axes[0, 2].semilogx(x, y)\n",
+    "axes[1, 0].loglog(x, y)\n",
     "\n",
-    "for i, func in enumerate(plot_list, start=1):\n",
-    "    plt.subplot(2, 3, i)\n",
-    "    func(x, y)\n",
-    "    plt.title(func.__name__)\n",
-    "    plt.grid()\n",
+    "axes[1, 1].plot(x, y)\n",
+    "axes[1, 1].set_yscale('symlog')\n",
+    "axes[1, 2].plot(x, y)\n",
+    "axes[1, 2].set_xscale('symlog')\n",
     "\n",
-    "plt.subplot(235)\n",
-    "plt.plot(x, y)\n",
-    "plt.yscale('symlog')\n",
-    "plt.title('symlog (y)')\n",
-    "plt.grid()\n",
+    "plot_list = [['linear', 'semilogy', 'semilogx'],\n",
+    "             ['loglog', 'symlog (y)', 'symlog (x)']]\n",
     "\n",
-    "plt.subplot(236)\n",
-    "plt.plot(x, y)\n",
-    "plt.xscale('symlog')\n",
-    "plt.title('symlog (x)')\n",
-    "plt.grid()\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        axes[i, j].set_title(plot_list[i][j])\n",
+    "        axes[i, j].grid()\n",
     "\n",
-    "plt.subplots_adjust(top=0.92, bottom=0.08, left=0.10, right=0.95, hspace=0.3, wspace=0.3)\n",
+    "plt.subplots_adjust(bottom=0.1, top=0.9, left=0.1, right=0.9, hspace=0.3, wspace=0.3)\n",
     "plt.show()"
    ]
   },
@@ -324,7 +328,10 @@
    "source": [
     "### Statistics\n",
     "\n",
-    "For statistical analysis we can draw histograms, boxplots and bar plots with subcategories. Let's generate some random data using `numpy.random`. There are 2 ways to do this. For the different datasets, let's make the standard deviation 15 and 5 respectively. "
+    "For statistical analysis we can draw histograms, boxplots and bar plots with subcategories. Let's generate some Gaussian random data using `numpy.random`. There are 2 ways to do this. For the different datasets, let's make the standard deviation 15 and 5 respectively. \n",
+    "\n",
+    "+ `numpy.random.randn()` returns samples from the \"standard normal\" distribution with a mean of 0 and standard deviation of 1.\n",
+    "+ `np.random.normal()` draws random samples from a normal distribution with the mean and standard deviation as inputs."
    ]
   },
   {
@@ -337,7 +344,7 @@
     "sigma = 15\n",
     "n = 1500\n",
     "\n",
-    "run1 = mu + sigma * np.random.randn(n)\n",
+    "run1 = mu + sigma*np.random.randn(n)\n",
     "run2 = np.random.normal(loc=mu, scale=5, size=n)\n",
     "\n",
     "print(run1, run1.mean(), run1.std())\n",
@@ -348,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the first histogram, let's use intervals of 10 as the bin borders. For the second one, let's use 40 bins, make it 30 % transparent, and normalise the data to form a probability density. Note `alpha` is a kwarg that can change colours from opaque (1) to transparent (0) and can be used on any plot."
+    "For the first histogram, let's use intervals of 10 as the bin borders. For the second one, let's use 40 bins, make it 30 % transparent, and normalise the data to form a probability density (the sum of which will be 1). Note `alpha` is a kwarg that can change colours from opaque (1) to transparent (0) and can be used on any plot."
    ]
   },
   {
@@ -363,32 +370,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(9, 4))\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(9, 4))\n",
     "\n",
-    "plt.subplot(121)\n",
     "bins1 = np.arange(0, 101, 10)\n",
-    "n, bins, patches = plt.hist(run1, bins1)\n",
-    "plt.xlabel('Data')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Histogram of Run 1')\n",
-    "plt.text(60, 350, '$\\mu=50,\\ \\sigma=15$')\n",
-    "plt.grid()\n",
+    "axes[0].hist(run1, bins1)\n",
+    "axes[0].set_xlabel('Data')\n",
+    "axes[0].set_ylabel('Frequency')\n",
+    "axes[0].set_title('Histogram of Run 1')\n",
+    "axes[0].text(60, 350, '$\\mu=50,\\ \\sigma=15$')\n",
+    "axes[0].grid()\n",
     "\n",
-    "plt.subplot(122)\n",
-    "n, bins, patches = plt.hist(run2, 40, density=True, facecolor='g', alpha=0.7)\n",
-    "plt.xlabel('Data')\n",
-    "plt.ylabel('Probability')\n",
-    "plt.title('Histogram of Run 2')\n",
-    "plt.text(55, 0.07, '$\\mu=50,\\ \\sigma=5$')\n",
-    "plt.grid()\n",
+    "axes[1].hist(run2, 40, density=True, facecolor='g', alpha=0.7)\n",
+    "axes[1].set_xlabel('Data')\n",
+    "axes[1].set_ylabel('Probability')\n",
+    "axes[1].set_title('Histogram of Run 2')\n",
+    "axes[1].text(55, 0.07, '$\\mu=50,\\ \\sigma=5$')\n",
+    "axes[1].grid()\n",
     "\n",
-    "plt.subplots_adjust(wspace=0.25)\n",
-    "plt.show()"
+    "plt.subplots_adjust(wspace=0.25)"
    ]
   },
   {
@@ -428,7 +430,7 @@
    "source": [
     "### Interactive plots\n",
     "\n",
-    "We can also use a slider widget on our plots. "
+    "We can also use a slider widget on our plots! You can read more about it here: https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html"
    ]
   },
   {
@@ -446,21 +448,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(t, A, B):\n",
-    "    return np.exp(-t) * np.cos(A*np.pi*t + B)\n",
-    "\n",
-    "t1 = np.arange(0.0, 5.0, 0.05)\n",
+    "t = np.arange(0, 5, 0.05)\n",
     "\n",
     "def decaying_sinusoid(A, B):\n",
-    "    plt.figure(figsize=(5,4))\n",
-    "    plt.subplot(211)\n",
-    "    plt.plot(t1, f(t1, A, B))\n",
+    "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(4, 3.2))\n",
+    "    y1 = np.exp(-t)*np.cos(A*np.pi*t + B)\n",
+    "    ax1.plot(t, y1)\n",
     "\n",
-    "    plt.subplot(212)\n",
-    "    y2 = np.cos(-A*np.pi*t1 + B)\n",
-    "    plt.plot(t1, y2)\n",
-    "\n",
-    "    plt.show()"
+    "    y2 = np.cos(-A*np.pi*t + B)\n",
+    "    ax2.plot(t, y2)"
    ]
   },
   {
@@ -470,40 +466,6 @@
    "outputs": [],
    "source": [
     "interact(decaying_sinusoid, A=-2, B=(-3, 3, 0.5), continuous_update=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# interact?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(Finish/Move) I will take this oppurtunity to introduce a bit of new syntax as well (calling the subplot by the axis object it creates allows you to change more formatting properties). This is used here to make the subplots share the same x-axis, and to shade the area under the second plot."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     ax1.get_shared_x_axes().join(ax1, ax2)\n",
-    "#     ax1.set_xticklabels([])\n",
-    "#     ax2.fill_between(t2, 0, y2, alpha=0.7)"
    ]
   },
   {
@@ -546,7 +508,8 @@
     "X, Y = np.meshgrid(x, y)\n",
     "\n",
     "plt.figure(figsize=(5,4))\n",
-    "plt.scatter(X, Y)"
+    "plt.scatter(X, Y)\n",
+    "plt.show()"
    ]
   },
   {
@@ -581,7 +544,7 @@
    "outputs": [],
    "source": [
     "def f(x, y):\n",
-    "    return np.sin(np.sqrt(x ** 2 + y ** 2))\n",
+    "    return np.sin(np.sqrt(x**2 + y**2))\n",
     "\n",
     "x = np.linspace(0, 5, 50)\n",
     "y = np.linspace(0, 5, 40)\n",
@@ -767,7 +730,7 @@
    "source": [
     "### Surface plots\n",
     "\n",
-    "We can draw contour plots, wireframe plots and surface plots too."
+    "We can draw contour plots, wireframe plots and surface plots too. Click and drag the plot to look at it from different angles."
    ]
   },
   {
@@ -793,10 +756,10 @@
    "source": [
     "fig = plt.figure()\n",
     "ax = plt.axes(projection='3d')\n",
-    "# ax.plot_wireframe?\n",
     "ax.plot_wireframe(X, Y, Z, color='black')\n",
     "ax.set_title('Wireframe')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# ax.plot_wireframe?"
    ]
   },
   {
@@ -808,10 +771,10 @@
     "fig = plt.figure()\n",
     "ax = plt.axes(projection='3d')\n",
     "ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap='plasma', edgecolor='none')\n",
-    "# ax.plot_surface?\n",
-    "# Lower rstride => better resolution\n",
     "ax.set_title('Surface')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# ax.plot_surface?\n",
+    "# Lower stride values => better resolution"
    ]
   },
   {
